Done with static pages

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!DOCTYPE html>
+<html>
+    <body>
+    <h1>Contact</h1>
+    <p>
+      Table of activities of the kanchilug
+      <a href="http://kanchilug.wordpress/table-of-activities/">table of activity page</a>.
+    </p>
+  </body>
+</html>
+
