--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,7 @@
       <a href="http://kanchilug.wordpress.com/">KanchiLUG</a>
       sample application.
     </p>
+  <%= link_to "Sign Up now!", "#", :class => "signup_button round" %>
   </body>
 </html>
 
